--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body{
     width: 100px;
     height: auto;
     border-radius: 50%;
+    margin-top: 10px;
+
 }
 ul{
     list-style-type: none;
@@ -16,6 +18,7 @@ ul{
     padding: 0;
     display: flex;
     gap: 8px;
+    margin-top: 10px;
 }
 .header{
     display: flex;
@@ -94,4 +97,64 @@ button{
     width: 100%;
     height: auto;
     border-radius: 10%;
+    }
+
+.quote{
+    background-color: #efe7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.thequote{
+    width: 700px;
+    height: 200;
+    font-size: 36px;
+    color: #1f2937;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.speaker{
+    display: flex;
+    justify-content: end;
+}
+.ad{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+.the-ad{
+    width: 1000px;
+    height: 150px;
+    color: white;
+    border-radius: 25px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+.calltoaction{
+    align-self: center;
+}
+.signup{
+    border: 2px solid white;
+    
+    height: 50px;
+    width: 100px;
+    align-self: center;
+}
+.footer{
+    background-color: #1f2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.copyright{
+    color: white;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    
 }
